<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/askrate_mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:gravity="center"
        android:paddingStart="@dimen/askrate_padding"
        android:paddingLeft="@dimen/askrate_padding">

        <TextView
            android:id="@+id/askrate_title_text"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/askrate_title"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="@dimen/askrate_bodyRate"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/askrate_firstrate_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:padding="@dimen/askrate_rate">

            <ImageView
                android:id="@+id/askrate_firstrate_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/star_1_unselected" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/askrate_secondrate_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:padding="@dimen/askrate_rate">

            <ImageView
                android:id="@+id/askrate_secondrate_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/star_1_unselected" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/askrate_thirdrate_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:padding="@dimen/askrate_rate">

            <ImageView
                android:id="@+id/askrate_thirdrate_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/star_1_unselected" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/askrate_fourthrstrate_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:padding="@dimen/askrate_rate">

            <ImageView
                android:id="@+id/askrate_fourthrstrate_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/star_1_unselected" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/askrate_fifthrate_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:padding="@dimen/askrate_rate">

            <ImageView
                android:id="@+id/askrate_fifthrate_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/star_1_unselected" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/askrate_line_topseparator"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.005"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.345"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/askrate_padding"
        android:paddingTop="@dimen/askrate_padding"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/askrate_remindLater_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="@dimen/askrate_padding"
            android:layout_weight="0.3"
            android:gravity="center">

            <TextView
                android:id="@+id/askrate_remindLater_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/askrate_remindlater"
                android:textAllCaps="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/askrate_line_firstBottomSeparator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.003"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/askrate_norate_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="@dimen/askrate_padding"
            android:layout_weight="0.33"
            android:gravity="center">

            <TextView
                android:id="@+id/askrate_norate_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/askrate_norate"
                android:textAllCaps="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/askrate_line_secondBottomSeparator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.003"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/askrate_rate_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="@dimen/askrate_padding"
            android:layout_weight="0.33"
            android:gravity="center">

            <TextView
                android:id="@+id/askrate_rate_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/askrate_rate"
                android:textAllCaps="true" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>